--- a/_posts/2021-08-03-0802-0808.md
+++ b/_posts/2021-08-03-0802-0808.md
@@ -855,3 +855,407 @@ console.log(solution([[0, 0, -1, 0, 0, 0], [0, 0, 1, 0, -1, 0], [0, 0, -1, 0, 0,
 * 마지막에 for문에서 익지 않은 토마토가 있는지 확인하여 그렇다면 -1을 반환하고, 그렇지 않다면 토마토가 모두 익는데 걸린 날짜를 반환한다.
 
 
+## 0804 TIL
+# 18일 차 트리, 이분검색(결정알고리즘)
+## Union&Find
+* 서로소 집합
+* 여러개의 노드가 존재할 때 두 개의 선택해서, 현재 이 두 노드가 서로 같은 그래프에 속하는지 판별하는 알고리즘
+
+### Find
+* 한 노드(인덱스)가 해당 인덱스가 있는 집합과 같으면 해당 인덱스를 반환하고,
+* 그렇지 않다면 해당 인덱스 집합으로 Find를 재귀호출하여 그 값을 인덱스 집합에 다시 저장한 뒤 반환하는 함수
+
+```javascript
+function Find(v) {
+	if (v === unf[v]) return v;
+	else return unf[v] = Find(unf[v]);
+}
+```
+
+### Union
+* 두 노드가 속해있는 집합을 찾고, 집합이 서로 다르다면 같게 만들어주는 함수
+
+```javascript
+function Union(a, b) {
+	let fa = Find(a);
+	let fb = Find(b);
+	if(fa!==fb) unf[fa] = fb;
+}
+```
+
+
+## 친구인가? (Disjoint-Set : Union&Find)
+오늘은 새 학기 새로운 반에서 처음 시작하는 날이다. 현수네 반 학생은 N명이다.   
+현수는 각 학생들의 친구관계를 알고 싶다.  
+모든 학생은 1부터 N까지 번호가 부여되어 있고, 현수에게는 각각 두 명의 학생은 친구관계가 번호로 표현된 숫자쌍이 주어진다.  
+만약 (1, 2), (2, 3), (3, 4)의 숫자쌍이 주어지면 1번 학생과 2번 학생이 친구이고, 2번 학생과 3번 학생이 친구, 3번 학생과 4번 학생이 친구이다.   
+그리고 1번 학생과 4번 학생은 2번과 3번을 통해서 친구관계가 된다.   
+학생의 친구관계를 나타내는 숫자쌍이 주어지면 특정 두 명이 친구인지를 판별하는 프로그램을 작성하세요.   
+두 학생이 친구이면 “YES"이고, 아니면 ”NO"를 출력한다. 
+
+```javascript
+function solution(n, nums, s1, s2) {
+    let answer = "YES";
+    let unf=Array.from({length:n+1}, (v, i) => i);
+
+    function Find(v) {
+        if (v===unf[v]) return v;
+        else return unf[v] = Find(unf[v]);
+    }
+    function Union(a, b) {
+        let fa=Find(a);
+        let fb=Find(b);
+        if(fa!==fb) unf[fa] = fb;
+    }
+
+    for (let [a, b] of nums) {
+        Union(a, b);
+    }
+
+    if(Find(s1)!==Find(s2)) return "NO";
+
+    return answer;
+}
+```
+* nums로 넘겨받은 배열을 유니온 함수를 사용해서 같은 집합으로 묶는다.
+* Find로 받은 매개변수 2개가 같은 함수 내에 위치했는지 확인한다.
+
+
+## MST(최소신장트리)
+* 그래프 내의 모든 정점을 포함하는 트리를 스패닝 트리라고 한다.
+* MST는 스패닝 트리 중에서 사용된 간선들의 가중치 합이 최소인 트리이다.
+* 각 간산의 가중치가 동일하지 않을 때 단순히 가장 적은 간선을 사용한다고 해서 최소 비용이 얻어지는 것은 아니다.
+* 즉, 네트워크에 있는 모든 정점들을 가장 적은 수의 간선과 비용으로 연결하는 것
+
+### 특징
+1. 간선의 가중치의 합이 최소여야 한다.
+2. n개의 정점을 가지는 그래프에 대해 반드시 (n-1)개의 간선만을 사용해야 한다.
+3. 사이클이 포함되어서는 안된다.
+
+* 도로 건설, 전기 회로, 통신, 배관 등에서 사용
+
+### Kruskal MST 알고리즘
+* 탐욕적인 방법을 이용하여 네트워크의 모든 정점을 최소 비용으로 연결하는 최적 해답을 구하는 것
+* MST가 각 단계에서 사이클을 이루지 않는 최소 비용 간선을 선택한다.
+* 간선 선택을 기반으로 하는 알고리즘
+* 이전 단계에서 만들어진 신장 트리와는 상관없이 무조건 최소 간선만을 선택하는 방법
+ 
+
+## 원더랜드(최소스패닝트리: 크루스칼, Union&Find 활용)
+원더랜드에 문제가 생겼다. 원더랜드의 각 도로를 유지보수하는 재정이 바닥난 것이다.   
+원더랜드는 모든 도시를 서로 연결하면서 최소의 유지비용이 들도록 도로를 선택하고 나머지 도로는 폐쇄하려고 한다.  
+모든 도시를 연결하면서 드는 최소비용을 반환하라.
+
+```javascript
+function solution(n, edges) {
+    let answer = 0;
+    let unf = Array.from({length: n + 1}, (v, i) => i);
+
+    function Find(v) {
+        if (v === unf[v]) return v;
+        else return unf[v] = Find(unf[v]);
+    }
+
+    function Union(a, b) {
+        let fa = Find(a);
+        let fb = Find(b);
+        if (fa!==fb) unf[fa] = fb;
+    }
+
+    edges.sort((a, b) => a[2] - b[2]);
+    
+    for (let [a, b, c] of edges) {
+        let fa = Find(a);
+        let fb = Find(b);
+        if (fa !== fb) {
+            answer += c;
+            unf[fa] = fb;
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution(9, [[1, 2, 12], [1, 9, 25], [2, 3, 10], [2, 8, 17], [2, 9, 8], [3, 4, 18], [3, 7, 55], [4, 5, 44], [5, 6, 60], [5, 7, 38], [7, 8, 35], [8, 9, 15]]));
+```
+* 모든 도로 정보 배열을 비용으로 오름차순 정렬했다.
+* 정렬된 간선 리스트에서 순서대로 사이클을 형성하지 않는 간선을 선택했다.
+	* 낮은 가중치를 먼저 선택
+	* 사이클 형성 간선 제외
+* 해당 간선을 현재의 MST 집합에 추가한다.
+
+
+
+## 이분검색
+임의의 N개의 숫자가 입력으로 주어집니다.   
+N개의 수를 오름차순으로 정렬한 다음 N개의 수 중 한 개의 수인 M이 주어지면 이분검색으로 M이 정렬된 상태에서 몇 번째에 있는지 구하는 프로그램을 작성하세요.   
+단 중복값은 존재하지 않습니다. 
+
+```javascript
+function solution(nums, m) {
+    let answer;
+    let lt = 0;
+    let rt = nums.length - 1;
+    
+    nums.sort((a, b) => a - b);
+
+    while (lt <= rt) {
+        let mid = parseInt((lt + rt) / 2);
+
+        if (m < nums[mid]) {
+            rt = mid - 1;
+        } else if (m > nums[mid]) {
+            lt = mid + 1;
+        }
+        else {
+            answer = mid + 1;
+            break;
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution([23, 87, 65, 12, 57, 32, 99, 81], 32));
+```
+* 이분 검색을 사용하려면 먼저 정렬을 해야 한다.
+* lt와 rt를 설정하고, while문을 lt보다 rt가 크거나 같을 때까지 돌려서 mid를 조정해나가며 logN으로 구한다.
+
+
+
+## 2차원 배열 이분검색
+각 행과 각 열이 오름차순으로 되어 있는 2차원 배열이 주어지면 가장 효율적인 방법으로 특정 숫자는 찾는 프로그램을 작성해보세요. 
+
+```javascript
+function solution(matrix, target) {
+    let answer;
+    let row = 0;
+    let col = matrix[row].length - 1;
+
+    while(row<matrix.length && col>=0) {
+        if (target > matrix[row][col]) {
+            row++;
+        }
+        else if (target < matrix[row][col]) {
+            col--;
+        }
+        else {
+            answer = [row,col];
+            break;
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution([[1, 6, 9, 12], [3, 7, 10, 14], [5, 8, 13, 17], [15, 18, 20, 23]], 8));
+```
+* row 번호는 0, col 번호는 len - 1에서 시작한다.
+* target이 그 값보다 작으면 col을 앞으로 보낸다.
+* target이 값보다 크면 row를 뒤로 보내서 값을 키워준다.
+
+
+## 랜선자르기 (결정 알고리즘)
+엘리트 학원은 자체적으로 K개의 랜선을 가지고 있다. 그러나 K개의 랜선은 길이가 제각각이다.   
+선생님은 랜선을 모두 N개의 같은 길이의 랜선으로 만들고 싶었기 때문에 K개의 랜선을 잘라서 만들어야 한다.   
+예를 들어 300cm 짜리 랜선에서 140cm 짜리 랜선을 두 개 잘라내면 20cm 은 버려야 한다. (이미 자른 랜선은 붙일 수 없다.)   
+편의를 위해 랜선을 자를때 손실되는 길이는 없다고 가정하며, 기존의 K개의 랜선으로 N개의 랜선을 만들 수 없는 경우는 없다고 가정하자.   
+그리고 자를 때는 항상 센티미터 단위로 정수 길이만큼 자른다고 가정하자. N개보다 많이 만드는 것도 N개를 만드는 것에 포함된다.   
+이때 만들 수 있는 최대 랜선의 길이를 구하는 프로그램을 작성하시오. 
+
+```javascript
+function solution(nums, n) {
+    let answer;
+    let lt = 1;
+    let rt = Math.max(...nums);
+ 
+    function count(len) {
+        let cnt = 0;
+        for (let x of nums) {
+            cnt += Math.floor(x / len);
+        }
+        return cnt;
+    }
+
+    while (lt <= rt) {
+        let mid = parseInt((lt + rt) / 2);
+
+        if (count(mid) >= n) {
+            answer = mid;
+            lt = mid + 1;
+        }
+        else {
+            rt = mid - 1;
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution([802, 743, 457, 539], 11));
+```
+* 이분 검색으로 결정 알고리즘을 구현하려면, lt와 rt 사이에 답이 있는지 검증해야 한다.
+* mid로 의도한 수를 반환하는 함수를 잘 작성하는 것이 실력
+* 1과 매개변수로 받는 배열에서 가장 큰 값 사이에 답이 있을 것이라고 생각했다.
+* while문으로 lt와 rt를 구하고, 함수로 그 중간값을 넘겨서 반환하는 값에 따라 lt와 rt를 조정해가며 원하는 값을 얻었다.
+
+
+
+## 뮤직비디오(결정알고리즘) 
+지니레코드에서는 불세출의 가수 조영필의 라이브 동영상을 DVD로 만들어 판매하려 한다.   
+DVD에는 총 N개의 곡이 들어가는데, DVD에 녹화할 때에는 라이브에서의 순서가 그대로 유지되어야 한다.   
+순서가 바뀌는 것을 우리의 가수 조영필씨가 매우 싫어한다.   
+즉, 1번 노래와 5번 노래를 같은 DVD에 녹화하기 위해서는 1번과 5번 사이의 모든 노래도 같은 DVD에 녹화해야 한다.   
+또한 한 노래를 쪼개서 두 개의 DVD에 녹화하면 안된다.   
+지니레코드 입장에서는 이 DVD가 팔릴 것인지 확신할 수 없기 때문에 이 사업에 낭비되는 DVD를 가급적 줄이려고 한다.   고민 끝에 지니레코드는 M개의 DVD에 모든 동영상을 녹화하기로 하였다.   
+이 때 DVD의 크기(녹화 가능한 길이)를 최소로 하려고 한다.     
+그리고 M개의 DVD는 모두 같은 크기여야 제조원가가 적게 들기 때문에 꼭 같은 크기로 해야 한다. 
+
+```javascript
+function solution(nums, m) {
+    let answer; 
+    let lt = Math.max(...nums);
+    let rt = nums.reduce((acc, curr) => acc + curr, 0);
+
+    function count(capacity) {
+        let cnt = 1
+        let sum = 0;
+        
+        for (let x of nums) {
+            if(sum + x > capacity) {
+                cnt++;
+                sum=x;
+            }
+            else sum+=x;
+        }
+        return cnt;
+    }
+
+    while(lt <= rt) {
+        let mid = parseInt((lt + rt) / 2);
+        if (count(mid) <= m) {
+            answer = mid;
+            rt = mid - 1;
+        }
+        else {
+            lt = mid + 1;
+        }
+    }
+
+    return answer;
+}
+```
+* 결정 알고리즘을 적용하는 문제들은 우선 lt, rt를 지정한다.
+* 그리고 while문으로 `lt <= rt`를 돌리고 내부에서 mid를 구한 뒤, mid를 목표 값과 비교하여 lt, rt를 조정한다.
+* mid를 매개변수로 하여 값을 계산하는 함수를 생성하여 구현한다.
+
+
+## 마구간 정하기(결정알고리즘) 
+N개의 마구간이 수직선상에 있습니다. 각 마구간은 x1, x2, x3, ......, xN의 좌표를 가지며, 마구간간에 좌표가 중복되는 일은 없습니다.    
+현수는 C마리의 말을 가지고 있는데, 이 말들은 서로 가까이 있는 것을 좋아하지 않습니다.      
+각 마구간에는 한 마리의 말만 넣을 수 있고, 가장 가까운 두 말의 거리가 최대가 되게 말을 마구간에 배치하고 싶습니다.    
+C마리의 말을 N개의 마구간에 배치했을 때 가장 가까운 두 말의 거리가 최대가 되는 그 최대값을 출력하는 프로그램을 작성하세요. 
+
+```javascript
+function solution(nums, c) {
+    let answer;
+    nums.sort((a, b) => a - b);
+    let lt = 1;
+    let rt = nums[nums.length - 1] - 1;
+
+    function count(len) {
+        let cnt = 1;
+        let ep = nums[0];
+        for (let i = 1; i < nums.length; i++) {
+            if (nums[i] - ep >= len) {
+                cnt++;
+                ep = nums[i];
+            }
+        }
+        return cnt;
+    }
+
+    while (lt <= rt) {
+        let mid = parseInt((lt + rt) / 2);
+
+        if (count(mid) >= c) {
+            answer = mid;
+            lt = mid + 1;
+        }
+        else {
+            rt = mid - 1;
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution([1, 3, 6, 11, 18, 27, 38, 41, 56, 73, 92, 113], 8));
+```
+* count 함수는 거리를 매개변수로 받아서, nums의 배열 간의 거리 간격이 매개 변수로 받은 거리보다 길거나 같다면 해당 마구간에 말을 넣을 수 있는 것으로 판단하여 값을 계산했다.
+* count 함수만 잘 작성하면 쉽게 해결할 수 있다.
+
+
+
+## 제품 이동 
+섬이 많은 나라로 유명한 인도네시아는 N(1≤N≤10,000)개의 섬으로 이루어진 나라이다.   
+이 섬들은 다리로 연결되어 있는데, 각 다리는 통과하려면 무게제한이 있다.   
+이 무게제한을 넘어가는 무게가 다리를 이용하면 다리는 무너지게 된다.  
+엘리트 무역회사는 이들 섬 중 2개에 공장이 있는데 항상 두 공장에서 서로 제품을 이동하는 작업을 한다.   
+섬의 개수 N과 각 섬을 연결하는 다리 정보가 주어지면 한 번의 이동으로 옮길 수 있는 제품의 최대 무게를 구하세요.   
+단 다리를 건널 수 있는가의 무게제한은 제품의 무게로만 계산한다. 
+
+```javascript
+function solution(n, edges, s, e) {
+    let answer = 0;
+    let graph = Array.from(Array(n + 1), () => Array());
+    let lt = 1;
+    let rt = 0;
+
+    for ([a, b, c] of edges) {
+        graph[a].push([b, c]);
+        graph[b].push([a, b]);
+        rt = Math.max(rt,c);
+    }
+
+    function BFS(w) {
+        let ch=Array.from({length: n+1}, () => 0);
+        let queue = [];
+        ch[s] = 1;
+        queue.push(s);
+        while(queue.length) {
+            let a = queue.shift();
+            for(let [b,c] of graph[a]) {
+                if (c >= w && ch[b] === 0) {
+                    ch[b]=1;
+                    queue.push(b);
+                }
+            }
+        }
+        return ch[e];
+    }
+
+    while (lt <= rt) {
+        let mid = parseInt((lt + rt) / 2);
+        if(BFS(mid)) {
+            answer = mid;
+            lt = mid + 1;
+        }
+        else {
+            rt = mid - 1;
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution(5, [[1, 2, 5], [1, 3, 3], [1, 4, 2], [2, 4, 2], [3, 4, 4], [4, 5, 3]], 1, 5));
+```
+* 여러가지 생각해야 할 것이 많았던 문제였다.
+* 우선 그래프를 생성하고 양방향 인접리스트에 맞게 매개변수로 받은 좌표를 입력했다.
+* 그리고 물체의 무게를 기준으로 결정 알고리즘을 구현하였다.
+* BFS를 통해서 물체의 무게를 정답으로 정할지 말지 정했는데,  물체의 무게가 허용하는 무게보다 작거나 같을 때만 다리를 통과하도록 했다.
+* 그래서 목표했던 다리부터 다리까지 이동할 수 있다면 해당 무게로 한 번에 다리를 지날 수 있다고 판단하였다.
+
+
+
