--- a/_posts/2021-08-03-0802-0808.md
+++ b/_posts/2021-08-03-0802-0808.md
@@ -1258,4 +1258,284 @@ console.log(solution(5, [[1, 2, 5], [1, 3, 3], [1, 4, 2], [2, 4, 2], [3, 4, 4], 
 * 그래서 목표했던 다리부터 다리까지 이동할 수 있다면 해당 무게로 한 번에 다리를 지날 수 있다고 판단하였다.
 
 
+## 0805 TIL
+# 19일 차 다이나믹 프로그래밍
+## 계단 오르기
+철수는 계단을 오를 때 한 번에 한 계단 또는 두 계단씩 올라간다. 만약 총 4계단을 오른다면 그 방법의 수는  
+1+1+1+1, 1+1+2, 1+2+1, 2+1+1, 2+2 로 5가지이다.  
+그렇다면 총 N계단일 때 철수가 올라갈 수 있는 방법의 수는 몇 가지인가? 
+
+```javascript
+function solution(n) {
+    let answer = 0;
+    let dy = Array.from({length: n + 1}, () => 0);
+    dy[1] = 1;
+    dy[2] = 2;
+
+    for (let i = 3; i <= n; i++) {
+        dy[i] = dy[i-1] + dy[i-2];
+    }
+
+    answer = dy[n]
+
+    return answer;
+}
+```
+* 다이나믹 프로그래밍의 기본은 dy[i]를 잘 정의하는 것
+* 단계별로 조금씩 나눠서 구현하는데, 다음 단계를 구현할 때 바로 앞에 구한 값을 이용하여 구현
+* dy[i]는 i 번째 계단까지 올라갈 수 있는 방법의 수다.
+* i 번째 계단으로 가는 방법은, i - 1 번째 계단에서 한 칸 오르는 방법과 i - 2 번째 계단에서 두 칸 오르는 방법 두 가지밖에 없으므로, 그 둘을 더하면 값을 구할 수 있다.
+
+
+
+## 돌다리 건너기 
+철수는 학교에 가는데 개울을 만났습니다. 개울은 N개의 돌로 다리를 만들어 놓았습니다.     
+철수는 돌 다리를 건널 때 한 번에 한 칸 또는 두 칸씩 건너뛰면서 돌다리를 건널 수 있습니다.    
+철수가 개울을 건너는 방법은 몇 가지일까요?   
+
+```javascript
+function solution(n) {
+    let answer;
+    let dy = Array.from({length: n + 2}, () => 0);
+    dy[1] = 1;
+    dy[2] = 2;
+
+    for (let i = 3; i <= n + 1; i++) {
+        dy[i] = dy[i-2] + dy[i-1];
+    }  
+    answer = dy[n+1];
+
+    return answer;
+}
+
+console.log(solution(7));
+```
+* 첫 번째 문제와 같은 문제. 돌다리를 모두 건너야 하니 n + 1만 해줘서 계산하면 쉽게 나온다.
+
+
+
+## 최대 부분 증가수열 
+N개의 자연수로 이루어진 수열이 주어졌을 때, 그 중에서 가장 길게 증가하는(작은 수에서 큰 수로) 원소들의 집합을 찾는 프로그램을 작성하라.    
+예를 들어, 원소가 2, 7, 5, 8, 6, 4, 7, 12, 3 이면 가장 길게 증가하도록 원소들을 차례대로 뽑아내면 2, 5, 6, 7, 12를 뽑아내어 길이가 5인 최대 부분 증가수열을 만들 수 있다. 
+
+```javascript
+function solution(nums) {
+    let answer = 0;
+    let dy = Array.from({length: nums.length}, () => 0);
+    let pa = Array.from({length: nums.length}, () => -1);
+    let pos = 0;
+    dy[0] = 1;
+
+    for (let i = 1; i < nums.length; i++) {
+        let max = 0;
+        for (let j = i - 1; j >= 0; j--) {
+            if (nums[i] > nums[j] && dy[j] > max) {
+                max = dy[j];
+                pa[i] = j;
+            }
+            dy[i] = max + 1;
+            if (dy[i] > answer) {
+                answer = dy[i];
+                pos = i;
+            }
+        }
+    }
+    
+    let path = [];
+    function DFS(idx) {
+        if (idx === -1) return;
+        else {
+            DFS(pa[idx]);
+            path.push(nums[idx]);
+        }
+    }
+    DFS(pos);
+    console.log(path);
+    
+    return answer;
+}
+
+console.log(solution([5, 3, 7, 8, 6, 2, 9, 4]));
+```
+* LIS(최장 증가 부분 수열) 알고리즘
+* 원소가 n개인 배열의 일부 원소를 골라내서 만든 부분 수열 중, 각 원소가 이전 원소보다 크다는 조건을 만족하고, 그 길이가 최대인 부분 수열
+* 일반적으로 가장 쉽게 푸는 방법이 DP를 이용하는 것
+* dy[i]는 i 번째 항이 마지막 항이 되는 최대 부분 증가수열 길이
+* 최장 증가 부분 수열을 구하는 것은 요소를 전체적으로 탐색하면서 하나를 탐색할 때마다, 해당 요소부터 앞으로 검색해나가며 그보다 작은 수가 있고 그 중 dy가 제일 큰 수가 있으면 그 수의 dy + 1을 현재 요소의 dy에 저장
+	* 이러면 최장 증가수열의 길이를 저장
+* 이것을 DFS와 응용하여 최장 증가수열의 path를 반환할 수도 있다.
+	* 증가 수열을 연결하게 만든 dy의 경로 인덱스를 저장해서 새로운 배열을 생성
+	* 최장 증가수열의 인덱스를 pos에 저장
+	* 위의 두 개를 사용해서 재귀 호출하여 path를 만든다.
+
+
+
+## 효율적인 공부 
+철수는 과학적으로 공부하기 위해 전문 병원에서 철수의 신체 리듬에 따라 공부의 효율성을 표시한 표를 받았다.  
+표는 N(1<=N<=1,000,000)시간의 일정을 겹쳐지는 M(1<=M<=1,000)구간별로 공부의 효율성이 표시되어 있다.   
+각 구간은 시작시간(0<=st<N)과 끝나는 시간(st<et<=N) 그리고 해당 구간에서의 공부의 효율성이 주어진다.  
+철수는 한 구간을 공부하고 나면 꼭 휴식시간(1<=R<=N)을 가져야만 합니다.   
+철수가 N시간동안 공부를 할 때 각 구간을 잘 선택해서 공부를 열심히 한다면 가장 높은 효율성을 얼마인지 출력하는 프로그램을 작성하세요. 
+
+```javascript
+function solution(times, r) {
+    let answer;
+    let dy = Array.from({length: times.length}, () => 0);
+    times.sort((a, b) => a[1] - b[1]);
+    dy[0] = times[0][2]
+    
+    for (let i = 1; i < times.length; i++) {
+        let max = 0;
+        for (let j = i - 1; j >= 0; j--) {
+            if (times[j][1] + r <= times[i][0]) {
+                max = Math.max(max, dy[j]);         
+            }
+            dy[i] = max + times[i][2];
+        }
+    }   
+    answer = Math.max(...dy);
+
+    return answer;
+}
+```
+* 우선 끝나는 시간을 기준으로 일정을 오름차순 정렬하였다.
+* dy[i]는 i 번째 까지의 최대 공부 효율성
+* 이전 문제와 비슷한 방법으로 구현하였고, if문에서 이전 스케줄들의 끝나는 시간 + 휴식시간이 현재 일정의 시작시간보다 작거나 같을 때만 dy에 삽입했다.
+
+
+## 냅색 알고리즘
+최고 11kg의 무게를 저장할 수 있는 가방이 있다. 그리고 각각 5kg, 3kg, 6kg, 4kg의 무게를 가진 4종류의 보석이 있다.   
+이 보석들의 가치는 각각 12, 8, 14, 7이다.  
+이 보석을 가방에 담는데 11kg를 넘지 않으면서 최대의 가치가 되도록 하려면 어떻게 담아야 할까요?   
+각 종류별 보석의 개수는 무한이 많다. 한 종류의 보석을 여러 번 가방에 담을 수 있다는 뜻입니다. 
+
+```javascript
+function solution(nums, m) {
+    let answer;
+    let dy = Array.from({length: m + 1}, () => 0);
+
+    for (let i = 0; i < nums.length; i++) {
+        for (let j = nums[i][0]; j <= m; j++) {
+            dy[j] = Math.max(dy[j], dy[j-nums[i][0]] + nums[i][1]);
+        }
+    }
+    answer = dy[m]
+
+    return answer;
+}
+
+console.log(solution([[5, 12], [3, 8], [6, 14], [4, 7]], 11));
+```
+* dy[i]는 i 번째까지 담을 수 있는 최대의 가치이다.
+* 보석을 무한대로 쓸 수 있으므로, 기준을 보석의 무게로 잡고 무게만큼 떨어져 있는 가치에서 보석의 가치를 더한 값과 이전까지의 최대 가치를 비교하여 큰 값을 현재의 dy로 설정한다.
+
+
+
+## 동전 교환(냅색 알고리즘)
+다음과 같이 여러 단위의 동전들이 주어져 있을때 거스름돈을 가장 적은 수의 동전으로 교환해주려면 어떻게 주면 되는가?   
+각 단위의 동전은 무한정 쓸 수 있다. 
+
+```javascript
+function solution (nums, m) {
+    let answer;
+    let dy = Array.from({length: m + 1}, () => 1000); 
+    dy[0] = 0;
+
+    for (let i = 0; i < nums.length; i++) {
+        for (let j = nums[i]; j <= m; j++) {
+            dy[j] = Math.min(dy[j], dy[j - nums[i]] + 1);       
+        }
+    }
+    answer = dy[m];
+
+    return answer;
+}
+console.log(solution([1, 2, 5], 15));
+```
+* dy[i]: i원까지 거스를 수 있는 최소 동전 개수
+* 현재 dy[j]랑 비교하여 더 작은 값을 구해야 하기에 초기값을 설정하기 위해서 각 요소를 1000으로 크게 잡았다.
+
+
+
+## 최대점수 구하기(냅색 알고리즘) 
+이번 정보올림피아드대회에서 좋은 성적을 내기 위하여 현수는 선생님이 주신 N개의 문제를 풀려고 합니다.   
+각 문제는 그것을 풀었을 때 얻는 점수와 푸는데 걸리는 시간이 주어지게 됩니다.   
+제한시간 M안에 N개의 문제 중 최대점수를 얻을 수 있도록 해야 합니다.   
+(해당문제는 해당시간이 걸리면 푸는 걸로 간주한다, 한 유형당 한개만 풀 수 있습니다.)   
+
+```javascript
+function solution(nums, m) {
+    let answer;
+    let dy = Array.from({length: m + 1}, () => 0);
+
+    for (let i = 0; i < nums.length; i++) {
+        let ps = nums[i][0];
+        let pt = nums[i][1];
+        for (let j = m; j >= pt; j--) {
+            dy[j] = Math.max(dy[j], dy[j - pt] + ps);
+        }    
+    }
+
+    answer = dy[m];
+    return answer;
+}
+
+console.log(solution([[10, 5], [25, 12], [15, 8], [6, 3], [7, 4]], 20));
+```
+* 이전 두 문제와는 다르게 자원이 한 개로 한정되어 있다.
+* dy[i]: i분을 사용해 얻을 수 있는 최대 점수
+* 뒤에서부터 해당 자원을 얻을 수 있는 시간까지 앞으로 간다.
+
+
+
+## 최대공통부분문자열(LCS) 
+최대 공통 부분 문자열이란 두 문자열 acbehf와, abefc의 공통의 부분 문자열 중에서 가장 긴 것을 의미한다.   
+여기서 최대 공통 부분 문자열은 abef 이다.   
+두 문자열이 주어지면 두 문자열의 최대공통부분문자열의 길이를 출력하는 프로그램을 작성하세요.   
+
+```javascript
+function solution(s1, s2) {
+    let answer;
+    let n = s1.length;
+    let m = s2.length;
+    let dy = Array.from(Array(n+1), () => Array(m+1).fill(0));
+
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= m; j++) {
+            if(s1[i-1] === s2[j-1]) {
+                dy[i][j] = dy[i-1][j-1] + 1;
+
+            }
+            else {
+                dy[i][j] = Math.max(dy[i-1][j], dy[i][j-1]);
+            }
+        }
+    }
+    answer = dy[n][m];
+
+    let path=[];
+    function DFS(p1, p2) {
+        if(p1===0 || p2===0) return;
+        if(s1[p1-1]===s2[p2-1]){
+            DFS(p1-1, p2-1);
+            path.push(s1[p1-1]);
+        }
+        else {
+            if(dy[p1-1][p2]>dy[p1][p2-1]) DFS(p1-1, p2);
+            else DFS(p1,p2-1)
+        }
+    }
+    DFS(n, m);
+    console.log(path);
+    return answer;
+}
+
+console.log(solution('acbehf', 'abefc'));
+```
+* LCS문제를 해결해야 할 때는 2차원 다이나믹 프로그래밍을 떠올려보자
+* s1과 s2를 가지고 반복문을 돌면서 문자를 비교해 같다면 dy의 좌상 대각선에서 1을 더해 저장하고, 그렇지 않다면 위와 아래 값 중 큰 값을 dy[i][j]에 저장한다.
+* 그렇게 하면 dy[i][j]에는 해당 문자열 길이까지의 최대 공통부분문자열의 길이가 들어간다.
+* 2차 다이나믹 프로그래밍에서는 규칙을 직접 찾아내는 능력이 중요한 것으로 보인다.
+* DFS를 사용해서 path를 구하는 코드도 작성해보았다.
+
 
