--- a/_posts/2021-08-03-0802-0808.md
+++ b/_posts/2021-08-03-0802-0808.md
@@ -1538,4 +1538,297 @@ console.log(solution('acbehf', 'abefc'));
 * 2차 다이나믹 프로그래밍에서는 규칙을 직접 찾아내는 능력이 중요한 것으로 보인다.
 * DFS를 사용해서 path를 구하는 코드도 작성해보았다.
 
+## 0806
+# 20일 차 최단거리, Trie
+## 최소편집 
+문자열 A와 문자열 B가 주어져 있을 때, 문자열 A를 문자열 B로 편집(삽입, 삭제, 대체)하여 바꾸려 한다.  
+이때 편집하는 최소 횟수를 구하는 프로그램을 작성하세요.  
+만약 문자열 A가 aabab이고 문자열 B가 babb라면 2회의 편집으로 바꿀 수 있다.   
+문자열 aabab에서 제일 앞에 있는 a를 b로 대체하면 babab이고 네 번째 a를 삭제하면 된다. 
+
+```javascript
+function solution(s1, s2) {
+    let answer = 0;
+    let len1 = s1.length;
+    let len2 = s2.length;
+    let dy = Array.from(Array(1001), () => Array(1001).fill(0));
+    for (let i = 1; i <=len1; i++) dy[i][0] = i;
+    for (let i = 1; i <=len2; i++) dy[0][i] = i;
+    for (let i = 1; i <=len1; i++) {
+        for (let j = 1; j <= len2; j++) {
+            if(s1[i-1] === s2[j-1]) {
+                dy[i][j] = dy[i-1][j-1];
+            }
+            else {
+                dy[i][j] = Math.min(dy[i-1][j], dy[i][j-1], dy[i-1][j-1]) + 1;
+            }
+        }
+    }
+    answer = dy[len1][len2];
+
+    return answer;
+}
+```
+* 2차원 배열을 응용한 문제. dy[i][j]는 해당 위치까지의 최소 편집 횟수다
+* 각 기능을 정의하였다. 삭제는 윗 값 + 1, 삽입은 왼쪽 값 + 1, 대체는 대각선 + 1
+* 글자를 비교하여 둘이 같으면 대각선 값을 그대로 dy[i][j]에 저장하고, 그렇지 않으면 세 기능 중 하나를 실행해야 하므로 기능을 실행하기 전의 위치를 살펴 가장 작은 값 + 1을 해줘서 답을 구했다..
+
+
+
+## 동전 바꿔주기(냅색알고리즘) 
+명보네 동네 가게의 현금 출납기에는 k가지 동전이 각각n1, n2, ... , nk개 씩 들어있다.  
+가게 주인은 명보에게 T원의 지폐를 동전으로 바꿔 주려고한다. 이때, 동전 교환 방법은 여러가지가 있을 수 있다.
+예를 들어, 10원 짜리, 5원 짜리, 1원 짜리 동전이 각각2개, 3개, 5개씩 있을 때, 20원 짜리 지폐를 다음과 같은4가지 방법으로 교환할 수 있다.  
+20 = 10×2  
+20 = 10×1+5×2  
+20 = 10×1+5×1+1×5  
+20 = 5×3+1×5  
+입력으로 지폐의 금액 T, 동전의 가지수 k, 각 동전 하나의 금액 pi와 개수 ni가 주어질 때 (i=1,2,...,k)  
+지폐를 동전으로 교환하는 방법의 가지 수를 계산하는프로그램을 작성하시오. 방법의 수는 2^31 을 초과하지않는 것으로 가정한다. 
+
+```javascript
+// dy[i]: i 원을 교환하는 방법의 수
+function solution(t, coins) {
+    let answer;
+    let dy = Array.from(Array(t + 1), () => 0);
+    dy[0] = 1
+
+    for (let [p, n] of coins) {
+        for (let j = t; j >= 1; j--) {
+            for (let k = 1; k <= n; k++) {
+                if (j - p * k < 0) break;
+                dy[j] += dy[j - p * k];
+            }
+        }
+    }
+    answer = dy[t];
+    return answer;
+}
+
+console.log(solution(20, [[5, 3], [10, 2], [1, 5]]));
+```
+* 냅색 알고리즘에서 자원의 개수가 한정되어 있다면 3중 포문을 사용해서 dp를 돌려야 한다.
+* 우선 처음에는 주워진 자원 배열을 포문으로 돌린다.
+* dy[j]는 j원을 교환하는 방법의 수로 정하고, t원까지의 방법의 수를 구하기 위해서 뒤에서부터 1씩 감소시키며 내려온다.
+* 마지막으로 동전의 개수만큼 반복하여 금액에 동전의 개수를 곱한 값을 j에서 빼서, 해당 인덱스가 0보다 크다면 인덱스 위치에 있는 dy값 (이전의 동전들만 가지고 구한 방법의 수)을 dy[j]에 더한다.
+* 처음에 dy의 0번째 요소를 1로 초기화 해줘야한다.
+	* 처음 초기값을 정해서 생각한대로 프로그래밍이 되도록 하는 코딩 기술
+
+
+
+## 플로이드 와샬 알고리즘 
+N개의 도시가 주어지고, 각 도시들을 연결하는 도로와 해당 도로를 통행하는 비용이 주어질 때 모든 도시에서 모든 도시로 이동하는데 쓰이는 비용의 최소값을 구하는 프로그램을 작성하세요. 
+
+```javascript
+function solution(n, edges) {
+    let answer = Array.from(Array(n), () => Array(n));
+    let dist = Array.from(Array(n + 1), () => Array(n + 1).fill(1000));
+
+    for (let [a, b, c] of edges) {
+        dist[a][b] = c;
+    }
+    
+    for (let k = 1; k <= n; k++) {
+        for (let i = 1; i <= n; i++) {
+            for (let j = 1; j <= n; j++) {
+                if (i === j) dist[i][j] = 0;
+                dist[i][j] = Math.min(dist[i][j], dist[i][k] + dist[k][j]);
+            }
+        }
+    }
+    
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= n; j++) {
+            if (dist[i][j] === 1000) {
+                answer[i-1][j-1] = 'M';
+            } else {
+                answer[i-1][j-1] = dist[i][j];
+            }
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution(5, [[1, 2, 6], [1, 3, 3], [3, 2, 2], [2, 4, 1], [2, 5, 13], [3, 4, 5], [4, 2, 3], [4, 5,
+7]]));
+```
+* 플로이드 와샬 알고리즘은 모든 최단 경로를 구하는 문제에 사용하기 적합한 알고리즘이다.
+	* 냅색과 비슷하다.
+* dist[i][j]는 i번 정점에서 j번 정점으로 가는 최소 비용이다.
+* 인접 행렬로 그래프를 생성해서 모든 경로의 방향에 거리(비용)을 할당한다.
+* 그래프에 있는 요소들을 n번 반복해서 해당 요소로 이동하는 거리가 다른 요소를 거쳐서 가는 거리보다 짧은지 계산하여, 짧다면 그 거리를 dist[i][j]에 저장한다. 그 동작을 모두 반복하면 i에서 j로 가는 최단 거리가 저장된다.
+
+
+
+## 회장뽑기(플로이드-와샬 응용) 
+월드컵축구의 응원을 위한 모임에서 회장을 선출하려고 한다. 이모임은 만들어진지 얼마 되지 않았기 때문에 회원사이에 서로 모르는 사람도 있지만, 몇 사람을 통하면 서로 모두 알 수 있다.  
+각 회원은 다른 회원들과 가까운 정도에 따라 점수를 받게 된다.     
+예를 들어 어느 회원이 다른 모든 회원과 친구이면, 이 회원의 점수는 1점이다.   
+어느 회원의 점수가 2점이면, 다른 모든 회원이 친구이거나, 친구의 친구임을 말한다.   
+또한, 어느 회원의 점수가 3점이면, 다른 모든 회원이 친구이거나, 친구의 친구이거나, 친국의 친구의 친구임을 말한다.4점, 5점등은 같은 방법으로 정해진다.   
+각 회원의 점수를 정할 때 주의할 점은 어떤 두 회원이 친구 사이이면서 동시에 친구의 친구 사이이면, 이 두 사람은 친구사이라고 본다. 회장은 회원들 중에서 점수가 가장 작은 사람이 된다.  
+회장의 점수와 회장이 될 수 있는 모든 사람을 찾는 프로그램을 작성하시오. 
+
+```javascript
+function solution(n, edges) {
+    let answer = [];
+    let dist = Array.from(Array(n + 1), () => Array(n+1).fill(1000));
+    let score = Array.from({length: n + 1}, () => 0);
+    for(let  i = 1; i <= n; i++) dist[i][i]=0;
+    for(let [a,b] of edges) {
+        dist[a][b]=1;
+        dist[b][a]=1;
+    }
+
+    for(let k = 1; k <=n; k++) {
+        for (let i =1; i <=n; i++) {
+            for (let j = 1; j <= n; j++) {
+                dist[i][j] = Math.min(dist[i][j], dist[i][k] + dist[k][j]);
+            }
+        }
+    }
+
+    let PS = 1000;
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= n; j++) {
+            if(i===j) continue;
+            score[i] = Math.max(score[i], dist[i][j]);
+        }
+        PS= Math.min(PS, score[i]);
+    }
+    answer.push(PS);
+    let cnt = 0;
+    for (let i = 1; i <= n; i++) {
+        if(score[i] === PS) cnt++;
+    }
+    answer.push(cnt);
+    return answer;
+}
+
+console.log(solution(5, [[1, 2], [2, 3], [3, 4], [4, 5], [2, 4], [5, 3]]));
+```
+* 이전 문제와 비슷한 방식으로 해결하면 된다.
+* 다만 중요한 것은, 이 문제를 보고 이런 방식으로 풀어야겠다고 도출해내는 것이다.
+
+
+## 트라이 자료구조
+```javascript
+// Trie 자료구조
+class Node {
+    constructor() {
+        this.end = false;
+        this.child = {};
+    }
+}
+class Trie {
+    constructor() {
+        this.root = new Node();
+    }
+    insert(word) {
+        let cur = this.root;
+        for (let x of word) {
+            if (cur.child[x] === undefined) {
+                cur.child[x] = new Node();
+            }
+            cur = cur.child[x];
+        }
+        cur.end = true;
+    }
+    search(word) {
+        let cur = this.root;
+        for (let x of word) {
+            if (cur.child[x] === undefined) return false;
+            cur = cur.child[x];
+        }
+        return cur.end;
+    }
+    prefixS(str) {
+        let cur = this.root;
+        for (let x of str) {
+            if (cur.child[x] === undefined) return false;
+            cur = cur.child[x];
+        }
+        return true;
+    }
+}
+```
+* 검색을 하는 데 사용하는 자료구조이다.
+* Node에는 해당 단어가 끝났는지 알려주는 end와 Node를 잇기 위한 child가 있다.
+* Trie는 생성될 때 기본적으로 root노드를 생성한다.
+* insert는 단어를 삽입하는 메소드이다. 해당 문자를 이어서 단어를 Trie에 삽입하고, 마지막 문자는 단어가 끝났음을 알려주기 위해 end를 true로 한다.
+* search는 단어가 Trie에 있는지 확인하는 메소드이다. 해당 단어는 마지막 문자가 end true이므로, cur.end를 반환함으로써 해당 단어가 있는지 확인한다.
+* 비슷한 메소드로는 PrefixS가 있는데, 이 메소드는 해당 단어의 문자들만 제대로 이어진다면 true를 반환한다.
+
+
+## 자동완성 
+포털 다음에서 검색어 자동완성 기능을 넣고 싶은 라이언은 한 번 입력된 문자열을 학습해서 다음 입력 때 활용하고 싶어졌다.   
+예를 들어, go 가 한 번 입력되었다면, 다음 사용자는 g 만 입력해도 go를 추천해주므로 o를 입력할 필요가 없어진다!    
+단, 학습에 사용된 단어들 중 앞부분이 같은 경우에는 어쩔 수 없이 다른 문자가 나올 때까지 입력을 해야 한다.    
+효과가 얼마나 좋을지 알고 싶은 라이언은 학습된 단어들을 찾을 때 몇 글자를 입력해야 하는지 궁금해졌다.    
+예를 들어, 학습된 단어들이 아래와 같을 때    
+go    
+gone   
+guild   
+go를 찾을 때 go를 모두 입력해야 한다.   
+gone을 찾을 때 gon 까지 입력해야 한다. (gon이 입력되기 전까지는 go 인지 gone인지 확신 할 수 없다.)    
+guild를 찾을 때는 gu 까지만 입력하면 guild가 완성된다. 이 경우 총 입력해야 할 문자의 수는 7이다.    
+라이언을 도와 위와 같이 문자열이 입력으로 주어지면 학습을 시킨 후, 학습된 단어들을 순서 대로 찾을 때 몇 개의 문자를 입력하면 되는지 계산하는 프로그램을 만들어보자. 
+
+```javascript
+class Node {
+    constructor() {
+        this.cnt = 0;
+        this.child = {};
+    }
+}
+class Trie {
+    constructor() {
+        this.root = new Node();
+    }
+    insert(word) {
+        let cur = this.root;
+        for (let x of word) {
+            if (cur.child[x] === undefined) {
+                cur.child[x] = new Node();
+            }
+            cur = cur.child[x];
+            cur.cnt++;
+        }
+    }
+    getCount(word) {
+        let cur = this.root;
+        let count = 0;
+        for (let x of word) {
+            cur = cur.child[x];
+            count++;
+            if (cur.cnt === 1)  return count;
+        }
+        return count;
+    }
+}
+
+function solution(words) {
+    let answer = 0;
+    let trie = new Trie();
+
+    for (let x of words) {
+        trie.insert(x);
+    }
+
+    for (let x of words) {
+        answer += trie.getCount(x);
+    }
+
+    return answer;
+}
+
+
+console.log(solution(["go", "gone", "guild"]))
+```
+* Trie 자료구조를 필요한 부분을 살짝 변형하여 문제를 구현했다.
+* insert 메소드는 트라이에 자료를 학습시키는 역할을 한다. 같은 문자가 중첩돼서 학습되면, cnt를 증가시킨다. 즉 cnt가 1인 문자부터 해당 단어를 독립적으로 구별할 수 있다.
+* getCount 메소드는 단어를 독립적으로 구별할 수 있는 count 값을 반환한다.
+
+
 
