--- a/_posts/2021-08-03-0802-0808.md
+++ b/_posts/2021-08-03-0802-0808.md
@@ -1831,4 +1831,82 @@ console.log(solution(["go", "gone", "guild"]))
 * getCount 메소드는 단어를 독립적으로 구별할 수 있는 count 값을 반환한다.
 
 
+## 0807 TIL
+금요일에 풀지 못한 알고리즘 4번 문제 풀이
 
+
+## 올바른 괄호 만들기
+올바르지 않은 괄호문자열이 주어지면, 최소횟수로 괄호를 제거하여 올바른 괄호문자열로 만드는 프로그램을 작성하세요.  
+괄호를 최소로 제거했을 때 나올 수 있는 모든 올바른 괄호의 경우수를 출력합니다.
+
+```javascript
+function solution(s) {
+    let answer = 0;
+    let stack = [];
+    let cnt = 0;
+
+    for (let x of s) {
+        if (x === ')') {
+            if (stack.length === 0) {
+                cnt++;
+            } else {
+                stack.pop();
+            }
+        } else {
+            stack.push(x);
+        }
+    }
+    cnt += stack.length;
+    
+    let tmp = [];
+    let path = [];
+    function DFS(L, t) {
+        if (L === s.length - cnt) {
+            tmp.push(path.slice());
+        }
+        else {
+            for (let i = t; i < s.length; i++) {
+                path.push(s[i]);
+                DFS(L+1, i+1);
+                path.pop();
+            }
+        }
+    }
+    DFS(0, 0);
+    
+    let sh = new Map();
+
+    for (let x of tmp) {
+        stack = [];
+        cnt = 0;
+        for (let y of x) {
+            if (y === ')') {
+                if (stack.length === 0) {
+                    cnt++;
+                } else {
+                    stack.pop();
+                }
+            } else {
+                stack.push(x);
+            }
+        }
+        cnt += stack.length;
+        if (cnt === 0) {
+            sh.set(x.join(''), 1);
+        }
+    }
+    
+    for (let [k, v] of sh) {
+        if (k !== '') answer += v;
+    } 
+
+    return answer;
+}
+
+console.log(solution("()(()()"));
+```
+* 우선 최소한으로 괄호를 제거하는 수를 구했다.
+* DFS로 호출하여 해당 괄호의 수만큼 제거한 조합을 구했다.
+* 해당 조합이 스택이 맞는지 확인하고, 맞다면 map에 중첩되지 않도록 저장했다.
+* 키 값이 빈 스택일 때를 제외하고 수를 세서 반환했다.
+* 한 편으로는 여러 개념을 사용해서 문제를 해결했다는 즐거움이 있었지만, 훨씬 간결하게 풀 수 있는 방법도 있을 것이라는 생각이 들었다.
