--- a/_posts/2021-08-03-0802-0808.md
+++ b/_posts/2021-08-03-0802-0808.md
@@ -855,7 +855,7 @@ console.log(solution([[0, 0, -1, 0, 0, 0], [0, 0, 1, 0, -1, 0], [0, 0, -1, 0, 0,
 * 마지막에 for문에서 익지 않은 토마토가 있는지 확인하여 그렇다면 -1을 반환하고, 그렇지 않다면 토마토가 모두 익는데 걸린 날짜를 반환한다.
 
 
-## 0804 TIL
+## 0804 
 # 18일 차 트리, 이분검색(결정알고리즘)
 ## Union&Find
 * 서로소 집합
@@ -1258,7 +1258,7 @@ console.log(solution(5, [[1, 2, 5], [1, 3, 3], [1, 4, 2], [2, 4, 2], [3, 4, 4], 
 * 그래서 목표했던 다리부터 다리까지 이동할 수 있다면 해당 무게로 한 번에 다리를 지날 수 있다고 판단하였다.
 
 
-## 0805 TIL
+## 0805 
 # 19일 차 다이나믹 프로그래밍
 ## 계단 오르기
 철수는 계단을 오를 때 한 번에 한 계단 또는 두 계단씩 올라간다. 만약 총 4계단을 오른다면 그 방법의 수는  
@@ -1831,8 +1831,8 @@ console.log(solution(["go", "gone", "guild"]))
 * getCount 메소드는 단어를 독립적으로 구별할 수 있는 count 값을 반환한다.
 
 
-## 0807 TIL
-금요일에 풀지 못한 알고리즘 4번 문제 풀이
+## 0807
+Weekly 알고리즘 4번 문제 풀이
 
 
 ## 올바른 괄호 만들기
@@ -1910,3 +1910,59 @@ console.log(solution("()(()()"));
 * 해당 조합이 스택이 맞는지 확인하고, 맞다면 map에 중첩되지 않도록 저장했다.
 * 키 값이 빈 스택일 때를 제외하고 수를 세서 반환했다.
 * 한 편으로는 여러 개념을 사용해서 문제를 해결했다는 즐거움이 있었지만, 훨씬 간결하게 풀 수 있는 방법도 있을 것이라는 생각이 들었다.
+
+
+## 0808
+Weekly 알고리즘 5번 문제 풀이
+
+
+## 최대길이 등차수열
+길이가 N인 자연수 수열이 주어지면 이 수열에서 등차수열을 이루는 부분수열 중 최대길이를 갖는 부분수열을 구하는 프로그램을 작성하세요.  
+만약 주어지는 수열이 [1, 2, 3, 5, 7, 8, 9]가 주어지면 등차수열을 이루는 최대길이 부분수열은 [1, 3, 5, 7, 9]로 그 길이는 5입니다. 부분수열을 입력된 순서는 유지해야 합니다.
+
+```javascript
+function solution(nums) {   
+    let answer = 0;
+    let max = Math.max(...nums);
+    let min = Math.min(...nums);
+    let n = max - min;
+    let m = nums.length;
+    let dy1 = Array.from(Array(n + 1), () => Array(m + 1).fill(1));
+    let dy2 = Array.from(Array(n + 1), () => Array(m + 1).fill(1));
+
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= m; j++) {
+            for (let k = j - 1; k >= 1; k--) {
+                if (nums[k-1] === nums[j-1] - i) {
+                    dy1[i][j] = dy1[i][k] + 1;
+                    break;
+                }
+            }
+        }
+    }
+
+    for (let i = 1; i <= n; i++) {
+        for (let j = nums[m - 1]; j >= 1; j--) {
+            for (let k = j + 1; k <= m; k++) {
+                if (nums[k-1] === nums[j-1] - i) {
+                    dy2[i][j] = dy2[i][k] + 1;
+                    break;
+                }
+            }
+        }
+    }
+    
+    for (let i = 1; i <= n; i++) {
+        answer = Math.max(answer, ...dy1[i])
+        answer = Math.max(answer, ...dy2[i])
+    }
+    
+    return answer;
+}
+
+console.log(solution([1,2,3,5,7,8,9]));
+console.log(solution([25, 20, 15, 30, 10, 40, 5]));
+```
+* 배열 내에서 최솟값과 최댓값을 구해서 그 사이에 있는 공차를 모두 구했다.
+* 공차가 +일 때와, -일 때를 구분해서 모두 계산해 가장 긴 값을 저장하여 결과로 출력했다.
+* 다만 이렇게 풀면 공차의 크기가 커질수록 엄청 코드가 느려진다. 다른 방법도 한 번 생각해봐야겠다.
