--- a/_posts/2021-08-10-0809-0815.md
+++ b/_posts/2021-08-10-0809-0815.md
@@ -228,3 +228,228 @@ category: TIL
 * IE에서도 동작하는 space-between 값으로 바꾼 뒤, 세 요소의 총 너비는 820px, main의 너비는 940px이므로 main에서 패딩을 30px 준다면 IE에서도 동일한 너비만큼 떨어져 보이도록 구현할 수 있다.
 
 
+## 0810
+# 22일 차 CSS3
+## CSS 개요
+### CSS란?
+* CSS 또는 캐스케이딩 스타일 시트는 마크업 언어가 실제로 표시되는 방법을 기술하는 언어
+* HTML과 XHTML에 주로 쓰이며, XML에서도 사용 가능
+* CSS는 W3C의 표준이며, 레이아웃과 스타일을 정의할 때의 자유도가 높은 언어
+* CSS는 웹 사이트에서 사용되는 스타일을 지정하기 위한 언어로, 스타일은 웹의 독창적인 개념이 아니라 웹 이전부터 워드프로세스 등에 사용했던 개념임
+
+<br />
+
+### CSS의 과거와 현재
+* 1996년 W3C의 주도하에 첫 번째 CSS 버전인 CSS Level 1이 발표
+* 1998년에 CSS Level 2가 등장하면서 대부분의 웹 브라우저들이 CSS Level 2를 지원하기 시작
+* 그 후 CSS Level 2의 버그를 수정한 CSS Level 2.1이 2006년에 발표되면서 현재까지 표준으로 사용되고 있음
+* CSS Level 3은 모든 명세가 포함된 버전이 아닌 모듈 단위로 개발되고 있으며, 표준화가 모듈 단위로 진행되고 있음
+	* 몇몇 모듈은 현재 권고안 단계에 있으며, 초안 단계에 머물러 있는 모듈도 있음
+
+<br />
+
+### 웹표준 개발 단계
+1. 초안 (Draft)
+2. 작업 초안 (Working Draft)
+3. 권고 후보 (Candidate Recommendation)
+4. 최종 권고안 (Proposed Recommendation)
+5. 권고안 (Recommendation)
+
+<br />
+
+### HTML, CSS 관련 사이트
+[HTML 스펙 공식 사이트](https://html.spec.whatwg.org/multipage/)  
+[브라우저별 CSS 호환성과 사용가능한 CSS 상세하게 확인 가능](https://css3test.com/)  
+[하나의 마크업 구조로 여러 디자인된 CSS 확인 가능](http://www.csszengarden.com/)
+
+<br />
+
+## 수업 핵심 정리
+### 컨테이닝 블록
+요소의 크기와 위치는 컨테이닝 블록의 영향을 받고는 한다.  
+대부분의 경우, 어떤 요소의 컨테이닝 블록은 가장 가까운 블록 레벨의 조상의 콘텐츠 영역이나, 항상 그런 것은 아니다.
+
+1. position 속성이 static, relative, sticky 중 하나이면, 컨테이닝 블록은 가장 가까운 조상 블럭 컨테이너, 또는 가장 가까우면서 서식 맥락을 형성하는 조상 요소(`table`, `flex`, `grid` 아니면 블록 컨테이너 자기 자신)의 콘텐츠 영역 경계를 따라 형성된다.
+2. position 속성이 absolute인 경우, 컨테이닝 블록은 position 속성 값이 static이 아닌 가장 가까운 조상의 내부 여백 영역이다.
+3. position 속성이 fixed인 경우, 컨테이닝 블록은 뷰포트나 페이지 영역이다.
+4. position 속성이 absolute나 fixed인 경우, 다음 조건 중 하나를 만족하는 가장 가까운 조상의 내부 여백이 컨테이닝 블록이 될 수도 있다.
+	1. transform이나 perspective 값이 none이 아닌 경우
+	2. filter의 값이 none이 아닌 경우
+	3. will-change의 값이 transform이나 perspective인 경우
+	4. contain의 값이 paint인 경우
+
+#### 컨테이닝 블록으로부터 백분율 값 계산
+1. height, top, bottom 속성은 컨테이닝 블록의 height를 사용해 백분율을 계산한다.
+2. width, left, right, padding, margin 속성은 컨테이닝 블록의 width를 사용해 백분율을 계산합니다.
+
+<br />
+
+### 이미지에 여백이 남는 경우 해결법
+a태그 안에 이미지를 삽입할 경우 하단에 1~3px 정도의 여유 공간이 발생하는 것을 발견하였다.  
+학습하다가 이유가 너무 궁금해서 찾아보았다.  
+
+#### 발생 원인
+img태그가 인라인 요소이기 때문에 가상의 기준선이 존재하는데, 기본값으로 vertical-align의 baseline에 위치하게 된다.  
+예를 들어 영문 소문자로 치자면 아래 삐침이 없는 글차의 아랫쪽에 위치하게 된다.  
+그래서 아래 삐침이 있는 글자를 고려하여 하단에 공백을 유지하게 되는 것이다.  
+
+#### 해결 방법
+`display: block;`
+	* 인라인 요소에서 블록 요소로 속성을 변경시키는 방법
+	* 블록 요소로 변경하면 기존 속성이던 vertical-align: baseline이 없어진다.
+
+<br />
+
+### 인라인 요소와 띄워쓰기
+우리는 코드를 가독성 좋게 작성하기 위해 인덴트와 띄워쓰기를 주지만, 인라인 요소들은 줄바꿈을 하거나 하면 렌더링이 될 때 띄워쓰기 처리가 된다.  
+ul태그 내에서 li를 가로로 정렬하기 위해서 `display: inline-block`으로 지정해줬는데, 의도치 않은 공백이 있었고 개발자 도구로 검사해봐도 패딩이 없었기 때문에 상당히 당황스러웠다.  
+문제는 인라인 요소 특성과 띄워쓰기에 있었고, 부모 요소에서 폰트를 0으로 하고 자식 요소인 li에서 폰트 크기와 line-height를 조정하는 트릭을 이용해서 문제를 해결하였다.
+
+```css
+/* 부모 ul태그 */
+.member-service {
+    background-color: yellow;
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+    font-size: 0;
+    text-align: right;
+    padding: 2px 0;
+}
+.member-service li {
+    display: inline-block;
+    font-size: 0.875rem;
+    line-height: 1.15;
+}
+```
+* ul태그의 기본 속성을 초기화 시키기 위해서 list-style-type과 margin, padding-left를 초기화 시켜줬다.
+* reset.css를 사용해서 전체 초기화를 하면 편하기는 하지만 필요 없는 요소들까지 초기화되어 성능상 이슈가 발생할 수도 있다.
+	* 성능에 민감한 기업들은 필요한 요소들만 따로 reset하여 사용한다고 한다.
+
+<br />
+
+### BFC (Block Formatting Context)
+* 웹페이지에 나타나 있는 블록들이 보여지는 css 렌더링의 일부  
+* 블록의 속성이 다시 부여되어 다르게 렌더링 되는 현상 혹은 그러한 컨텐트  
+* BFC는 레이아웃 안의 작은 레이아웃이라고 생각하면 된다. BFC 내부의 모든 요소는 이 블록안에 속한다.
+	* 내부 요소가 float 상태라 해도 마찬가지
+	* 	그래서 container에 `overflow: hidden;` 속성을 부여하면 float 요소는 container 높이에 영향을 준다.
+
+block 레벨 요소는 float된 자식 요소를 포함하지 않는다. float는 한 요소가 보통 흐름으로부터 빠져 나와서 그 주위를 감싸는 자기 컨테이너의 좌우측을 따라 배치되어야 함을 지정하기 때문이다.  
+
+#### BFC 생성 규칙
+* html root 태그
+* none을 제외한 float
+* position: fixed, absolute
+* display: inline-block, table, table-cell, table-caption
+* overflow: visible을 제외한 모든 값
+* display: flow-root
+* display: flex, inline-flex, grid, inline-grid
+
+#### BFC의 특성
+* float는 BFC를 생성한다.
+* BFC는 margin collapse를 막는다.
+
+<br />
+
+### float 심화
+* new BFC
+* Line Box - BFC, IFC에 따라 그려지는 것이 아니라, Line Box에 따라 그려진다.
+
+#### New BFC
+* Normal Flow + Float Model
+* 두 번째 div에서 float를 지정해주는 즉시 이전까지의 BFC를 파기하고 새로운 BFC 영역이 시작된다.
+* inline 요소는 guard 되어 밀려나고, block 요소는 float되기만 할 뿐 밀려나지는 않는다.
+
+#### Line Box
+* float 요소만 고려됨
+* 부모요소는 높이를 점차 잃게 된다.
+* float 요소가 생성될 때마다 가용 linebox를 생성한다.
+	* linebox가 점점 줄어듬
+	
+<br />
+
+### float 해제 방식
+블록 요소를 수평으로 정렬하기 위해 float를 사용하는 경우, 레이아웃이 망가진 것처럼 착각할 수 있지만 실은 그게 아니다.
+
+1. overflow: hidden
+	* bfc 생성을 이용한 방법
+	* 걸쳐놓는 디자인을 할 경우 숨겨져서 보이지 않는다.
+	* hidden은 float과 아무 상관이 없는 속성이기 때문에 좋지 않다.
+2. 부모 요소를 float
+	* 부모 요소가 떠버릴 수 있다는 문제가 있다.
+3. 마크업 요소를 건드리기
+	* 아무것도 없는 div에 class="clearfix"를 지정
+	* css에서 clearfix에 `clear: both;`를 준다.
+	* 말 그대로 마크업을 건드리기 때문에 css적으로 해결하는 것이 좋다.
+4. 부모 요소에 after 가상 요소 선택자
+```css
+.main::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+```
+5. display: flow-root
+	* 자식들을 float로 정렬시키고 부모를 루트로 한다는 뜻
+	* 호환성 때문에 크로스 브라우징 이슈가 있다.
+
+<br />
+
+### 렌더링 엔진
+#### 브라우저의 역할
+브라우저의 주요 역할은 2가지이다.
+
+1. 사용자가 입력한 웹페이지, 이미지 등의 자원을 서버에게 요청
+2. 서버로부터 전달받은 자원을 화면에 출력
+
+#### 브라우저의 구성 요소
+* UI 
+	* 사용자가 접근할 수 있는 영역
+* Browser Engine 
+	* UI와 Rendering Engine 사이의 동작을 제어해주는 엔진
+	* 브라우저라는 프로그램의 비즈니스 로직, 핵심 중추 부분
+	* Data Storage를 참조하며 로컬에 데이터를 쓰고 읽으면서 다양한 작업
+* Rendering Engine 
+	* 요청한 콘텐츠를 화면에 출력하는 역할
+	* HTML, CSS 등을 파싱하여 최종적으로 화면에 그린다.
+* Networking
+	* http 요청을 할 수 있으며 네트워크를 호출할 수 있다.
+* JS Engine
+	* javascript 코드를 해석하고 실행한다.
+* UI Backend
+	* 기본적인 위젯을 그리는 인터페이스
+* Data Storage
+	* Local Storage, Indexed DB, 쿠키 등 브라우저 메모리를 활용하여 저장하는 영역
+
+#### 렌더링 엔진의 동작 원리
+1. 브라우저는 서버로부터 HTML 문서를 모두 전달 받는다.
+2. 렌더링 엔진은 전달받은 HTML 문서 파싱하여 DOM 트리를 구축한다.
+	* 어휘와 구문을 분석하여 HTML 문서를 파싱하고, 파싱 트리를 생성한다.
+	* 문서 파싱은 브라우저가 코드를 이해하고 사용할 수 있는 구조로 변환하는 것을 의미한다.
+	* 파싱 트리를 기반으로 DOM 요소와 속성 노드를 가지는 DOM 트리를 생성한다.
+3. 외부 CSS 파일과 함께 포함된 스타일 요소를 파싱한다.
+	* DOM을 생성할 때 거쳤던 과정을 그대로 CSS에 반복
+	* 브라우저가 이해하고 처리할 수 있는 형식 (CSSOM - css object model)로 변환
+4. DOM 트리와 3번의 결과물을 합쳐 렌더 트리를 구축한다.
+	* DOM Tree가 구축되어 가는 동안 브라우저는 DOM Tree를 기반으로 렌더 트리를 생성
+	* 문서를 시각적인 구성 요소로 만들어주는 역할을 한다.
+5. 렌더 트리의 각 노드에 대해서 화면 상에서 어디에 배치할 지 결정한다.
+	* 렌더링 트리는 위치와 크기를 가지고 있지 않기 때문에, 객체들에게 위치와 크기를 결정해준다.
+6. UI 백엔드에서 렌더 트리를 그리게 되고, 화면에 우리가 볼 수 있도록 출력된다.
+	* 렌더 트리의 각 노드를 화면의 픽셀로 나타낸다.
+	* 렌더 트리 그리기가 완료되면, 화면에 콘텐츠가 표현된다.
+
+<br />
+
+### 기타
+* css를 작업할 때 높이는 가급적 auto로 놔두는 것이 좋다.
+* a 태그에 padding을 주어서 클릭을 쉽게 만든다.
+	* 사용성 향상
+* 가상 요소 선택자를 사용해서 : 같은 의미없는 문자를 스크린 리더기가 읽어주는 경우, `aria-hidden="true"`속성을 사용하면 스크린 리더기가 읽지 않는다.
+* 숨김 컨텐츠
+	* 디자인 상 존재하지는 않지만 전체적인 맥락을 이해하는데 도움을 주는 컨텐츠
+	* a11y-hidden = accessibility-hidden
+		* a와 y사이에 스펠링이 11개라는 뜻
+
+
