--- a/_posts/2021-08-24-0823-0829.md
+++ b/_posts/2021-08-24-0823-0829.md
@@ -122,3 +122,39 @@ input {
 
 
 
+## 0824
+# 32일 차 Sass 이용해서 웹카페 프로젝트 진행하기
+## 의존성 패키지 모듈
+* live-server : 라이브 서버 실행
+* htmlhint : HTML 파일에 대한 문법검사를 수행
+* chokidar-cli : htmlhint가 watch 옵션을 제공하지 않는 문제를 해결
+* sass : Dart Sass 설치
+* postcss-normalize : normalize.css
+* postcss : postcss를 사용하기 위한 패키지
+* autoprefixer : 자동으로 웹브라우저 별 접두사를 생성
+* postcss-csso : css 파일 최적화(압축)
+* postcss-combine-media-query : 미디어쿼리 병합
+* npm-run-all  : 2개 이상의 npm 스크립트 명령을 직렬 또는 병렬로 수행
+
+
+### span 요소로 햄버거 버튼 디자인해서 활용하기
+* absolute top값을 %으로 줘서 위치를 설정한다.
+* 여기서 %는 부모의 세로너비의 영향을 받으므로, 원하는 위치에 배치하기 위해서는 자기 기준으로 내린 %만큼 다시 위로 올려줘야 한다.
+* reflow를 발생시키지 않기 위해서 올릴 때 transform 속성을 사용해서 -%만큼 Y축으로 올려준다.
+* is-active가 붙으면 애니메이션을 동작시키면서 햄버거 버튼을 X자로 바꾸는데 여기서 span을 감싸는 컨테이너에 overflow: hidden과 각 span의 translate 값을 지정해서 문제를 해결했다.
+	* 중앙에 있는 span은 화면에서 사라지게 하고, 위 아래 span은 중앙으로 모아서 회전시켜 애니메이션을 만들었다.
+
+### grid 기본 문법
+```css
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: 50px 50px;
+grid-template-areas: 
+"logo member"
+"logo search";
+```
+* 그리드를 사용하기 위해서는 우선 열의 크기를 정해줘야 한다.
+	* repeat 함수를 지정하여 첫 번째 매개변수에 열의 개수를 넣고, 두 번째 매개변수에 열의 크기를 정한다. 1fr은 균등하게 크기를 나눈다는 것을 뜻한다.
+* 행은 50px의 크기로 두 개를 지정하였다.
+* grid-template-areas 에는 영역의 행, 열에 맞춰서 이름을 지정할 수 있다.
+	* 그리드 아이템에 grid-area: "이름" 을 지정하면 해당 영역에 맞게 매칭되어 배치된다.
